crates/pixtuoid-core/tests/sources/snapshots/sources__conformance__kimi__permission-flow.snap
---
source: crates/pixtuoid-core/tests/sources/conformance.rs
expression: events
---
- SessionStart:
    agent_id: 2699309910342191900
    source: kimi
    session_id: session_67581be5-dd2c-4178-b3be-f3a2556a5eac
    cwd: /private/tmp/kimi-perm
    parent_id: ~
- ModelInfo:
    agent_id: 2699309910342191900
    model: openrouter/openrouter/auto
    effort: ~
- Identity:
    agent_id: 2699309910342191900
    source: kimi
    session_id: session_67581be5-dd2c-4178-b3be-f3a2556a5eac
    cwd: /private/tmp/kimi-perm
- ActivityStart:
    agent_id: 2699309910342191900
    tool_use_id: call_cf1aed1922764fec9d24b8e8
    detail:
      Generic:
        display: "Bash: rm NOTE.txt && ls -la"
- Identity:
    agent_id: 2699309910342191900
    source: kimi
    session_id: session_67581be5-dd2c-4178-b3be-f3a2556a5eac
    cwd: /private/tmp/kimi-perm
- Waiting:
    agent_id: 2699309910342191900
    reason: permission
- Identity:
    agent_id: 2699309910342191900
    source: kimi
    session_id: session_67581be5-dd2c-4178-b3be-f3a2556a5eac
    cwd: /private/tmp/kimi-perm
- ActivityEnd:
    agent_id: 2699309910342191900
    tool_use_id: call_cf1aed1922764fec9d24b8e8
- ActivityEnd:
    agent_id: 2699309910342191900
    tool_use_id: ~
- SessionEnd:
    agent_id: 2699309910342191900
    as_child: false
